// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> Matches the Button snapshot 1`] = `
<button
  aria-expanded={false}
  aria-haspopup={false}
  className="btnWhite"
  onClick={[Function]}
  type="button"
>
  <span
    className={null}
  >
    test
  </span>
</button>
`;

exports[`<Button /> Matches the Link snapshot 1`] = `
<a
  className="btnWhite"
  href="https://google.com"
  onClick={[Function]}
>
  <span
    className="text-label"
  >
    test
  </span>
</a>
`;
